<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FractalVisualizer</string>

    <string name="graph_setting_framerate">View Spd.</string>
    <string name="graph_setting_povframe">Aft.img.</string>

    <string name="gss_complexity">Complexity:</string>
    <string name="gss_rotate">Rotate:</string>
    <string name="gss_mutation">Mutation:</string>
    <string name="gss_randomizer">Randomizer:</string>
    <string name="gss_size">Size:</string>
    <string name="gss_angle">Angle:</string>

    <string name="gss_leaf_branch">Branch:</string>
    <string name="gss_sgasket_skew">Skew angle:</string>

    <string name="gsp_line">Brush</string>
    <string name="gsp_thickness">Thickness</string>
    <string name="gsp_each">Parted</string>
    <string name="gsp_shift">Shift spd.</string>
    <string name="gsp_color_each">Parted</string>
    <string name="gsp_color">Color</string>

    <string name="select_graph_title">Select graph</string>
    <string name="action_select">Select</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

    <string name="hud_graph_deleted">Deleted graph(s).</string>
    <string name="hud_graph_saved">Saved graph(s).</string>
    <string name="hud_error_connection">Procedure failed due to connection problem.</string>
    <string name="hud_error_thread">Failed to draw graphs. please save graphs and restart this app.</string>

    <string name="preference_title">Preference</string>
    <string name="preference_acknowledge_key" translatable="false">preference_acknowledge</string>
    <string name="preference_acknowledge_title">Acknowledge</string>
    <string name="preference_store_key" translatable="false">preference_store_key</string>
    <string name="preference_store_title">Open Google Play Store</string>

    <string name="store_url" translatable="false">https://play.google.com/store/apps/details?id=unicot.app.fractalvisualizer</string>
</resources>