<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gui_paint_ll_root"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/checkBox_gsp_draw_brush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView_gsp_brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gsp_line"
            android:textSize="16sp"
            android:textColor="#FFFFFFFF" />

        <ImageButton
            android:id="@+id/imageButton_gsp_brush_line"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="10dp"
            android:background="@drawable/brush_line"
            android:contentDescription="@null"
            android:onClick="onBrushButtonClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="draw_line" />

        <ImageButton
            android:id="@+id/imageButton_gsp_brush_triangle"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/brush_triangle"
            android:contentDescription="@null"
            android:onClick="onBrushButtonClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="draw_triangle" />

        <ImageButton
            android:id="@+id/imageButton_gsp_brush_crescent"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/brush_crescent"
            android:contentDescription="@null"
            android:onClick="onBrushButtonClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="draw_crescent" />

        <ImageButton
            android:id="@+id/imageButton_gsp_brush_twin_circle"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/brush_twin_circle"
            android:contentDescription="@null"
            android:onClick="onBrushButtonClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="draw_twin_circle" />

    </LinearLayout>

    <unicot.app.fractalvisualizer.view.SeekBarWithLabel
        android:id="@+id/gui_paint_sb_thickness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:is_int="true"
        app:is_seek_invoke="true"
        app:title="@string/gsp_thickness"
        app:val_default="1.0"
        app:val_max="30.0"
        app:val_min="1.0" />

    <LinearLayout
        android:id="@+id/checkBox_gsp_draw_eachs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView_gsp_each"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/gsp_each"

            android:textColor="#FFFFFFFF" />

        <CheckBox
            android:id="@+id/checkBox_gsp_draw_each"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <unicot.app.fractalvisualizer.view.SeekBarWithLabel
            android:id="@+id/gui_paint_sb_draw_each_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:is_int="true"
            app:is_seek_invoke="true"/>
    </LinearLayout>


    <unicot.app.fractalvisualizer.view.SeekBarWithLabel
        android:id="@+id/gui_paint_sb_draw_color_alpha"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:title="@string/gsp_color"
        app:val_default="255"
        app:val_max="255"
        app:is_int="true"
        app:is_seek_invoke="true" />

    <LinearLayout
        android:id="@+id/linearLayout_gsp_color_each"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/gsp_color_each"

            android:textColor="#FFFFFFFF" />

        <CheckBox
            android:id="@+id/checkBox_gsp_color_each"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_gsp_color_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageButton
            android:id="@+id/imageButton_gsp_single_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="2dp"
            android:background="@drawable/color_dummy"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="single" />

        <ImageButton
            android:id="@+id/imageButton_gsp_rainbow_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/color_rainbow"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="rainbow" />

        <ImageButton
            android:id="@+id/imageButton_gsp_fire_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/color_fire"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="fire" />

        <ImageButton
            android:id="@+id/imageButton_gsp_green_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/color_green"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="forest" />

        <ImageButton
            android:id="@+id/imageButton_gsp_cool_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/color_cool"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="cool" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_gsp_color_icons2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageButton
            android:id="@+id/imageButton_gsp_dawn_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="2dp"
            android:background="@drawable/color_dawn"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="dawn" />

        <ImageButton
            android:id="@+id/imageButton_gsp_sea_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/color_sea"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="deepsea" />

        <ImageButton
            android:id="@+id/imageButton_gsp_heat_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/color_heat"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="heat" />

        <ImageButton
            android:id="@+id/imageButton_gsp_monochro_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/color_monochro"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="bw" />

        <ImageButton
            android:id="@+id/imageButton_gsp_pastel_icon"
            android:layout_width="@dimen/gui_paint_button_size"
            android:layout_height="@dimen/gui_paint_button_size"
            android:layout_marginLeft="8dp"
            android:background="@drawable/color_pastel"
            android:contentDescription="@null"
            android:onClick="onColorPatternClicked"
            android:scaleType="fitXY"
            android:src="@drawable/color_focus_item"
            android:tag="pastel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gui_paint_colors_ll_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <SeekBar
            android:id="@+id/gui_paint_colors_sb_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:max="255" />

        <SeekBar
            android:id="@+id/gui_paint_colors_sb_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:max="255" />

        <SeekBar
            android:id="@+id/gui_paint_colors_sb_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:max="255" />

    </LinearLayout>

    <unicot.app.fractalvisualizer.view.SeekBarWithLabel
        android:id="@+id/gui_paint_sb_draw_color_shift"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:is_int="true"
        app:is_seek_invoke="true"
        app:title="@string/gsp_shift"
        app:val_default="1"
        app:val_max="30"
        app:val_min="-30" />
</LinearLayout>